; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_scope.c_scope_add_extras.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_scope.c_scope_add_extras.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @scope_add_extras to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scope_add_extras(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @UNIT(i32* %5)
  %7 = call i32 @unit_patch_contexts(i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %4, align 4
  store i32 %11, i32* %2, align 4
  br label %23

12:                                               ; preds = %1
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @UNIT(i32* %13)
  %15 = call i32 @unit_set_default_slice(i32 %14)
  store i32 %15, i32* %4, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %20

18:                                               ; preds = %12
  %19 = load i32, i32* %4, align 4
  store i32 %19, i32* %2, align 4
  br label %23

20:                                               ; preds = %12
  %21 = load i32*, i32** %3, align 8
  %22 = call i32 @scope_add_default_dependencies(i32* %21)
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %20, %18, %10
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @unit_patch_contexts(i32) #1

declare dso_local i32 @UNIT(i32*) #1

declare dso_local i32 @unit_set_default_slice(i32) #1

declare dso_local i32 @scope_add_default_dependencies(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
